<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/user_text_view"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="" />

    <EditText
        android:id="@+id/pass_text_view"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/user_text_view" />

    <Button
        android:id="@+id/login_button"
        android:layout_below="@id/pass_text_view"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="login"/>

    <fragment
        android:id="@+id/fragment"
        android:layout_below="@+id/login_button"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/my_nav" />

</RelativeLayout>